--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,5 +1,6 @@
 ---
-import "../styles/blog.css"; // Importar el archivo CSS
+import "../styles/blog.css"; 
+import "../styles/backgroundVideo.css"; 
 ---
 
 <!DOCTYPE html>
@@ -20,6 +21,10 @@ import "../styles/blog.css"; // Importar el archivo CSS
         <h1 id="blog-title"></h1>
         <img id="blog-image" src="" alt="" />
         <div id="blog-content"></div>
+
+        <div id="volverFeed">
+          <a class="btn-volverFeed" href="./blogs">Volver al feed</a>
+        </div>
       </article>
     </div>
 
