--- a/src/pages/formulario.astro
+++ b/src/pages/formulario.astro
@@ -3,6 +3,8 @@ import FormsBlogs from "../components/FormsBlogs.astro";
 import Header from "../components/Header.astro"
 import Footer from "../components/Footer.astro"
 import '../styles/formulario.css';
+import "../styles/backgroundVideo.css"; // Importar el archivo CSS
+
 ---
 
 <!doctype html>
@@ -34,16 +36,3 @@ import '../styles/formulario.css';
     <Footer></Footer>
   </body>
 </html>
-
-<style>
-  /* Fondo de video */
-  #background-video {
-    position: fixed; /* Fija el video en el fondo */
-    top: 0;
-    left: 0;
-    width: 100%; /* Ocupa todo el ancho */
-    height: 100%; /* Ocupa todo el alto */
-    object-fit: cover; /* Asegura que cubra toda la pantalla sin distorsión */
-    z-index: -1; /* Asegura que el video esté detrás del contenido */
-  }
-</style>
