--- a/src/styles/blog.css
+++ b/src/styles/blog.css
@@ -1,14 +1,3 @@
-/* Fondo de video */
-#background-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-
   /* Contenedor principal para el blog */
   .blog-container {
     display: flex;
@@ -51,3 +40,34 @@
     overflow-wrap: break-word;
     max-width: 100%;
   }
+
+  #volverFeed {
+    display: flex;
+    justify-content: center; /* Centra horizontalmente */
+    align-items: center;     /* Centra verticalmente */
+    height: 10vh;           /* Ocupa el 100% de la altura de la ventana */
+  }
+
+  /* Estilo del botón */
+.btn-volverFeed {
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 18px;
+  font-weight: bold;
+  color: white;
+  background-color: #007BFF;
+  text-decoration: none;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+}
+
+/* Efecto al pasar el ratón sobre el botón */
+.btn-volverFeed:hover {
+  background-color: #0056b3;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+/* Efecto al presionar el botón */
+.btn-volverFeed:active {
+  background-color: #003f73;
+}
