--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,7 +19,7 @@ export let title = "My SpaceBlog";
       <ul class="flex gap-6 text-lg font-medium">
         <li><a href="./" class="hover:text-blue-400 transition duration-300">Inicio</a></li>
         <li><a href="/blogs" class="hover:text-blue-400 transition duration-300">Blogs</a></li>
-        <li><a href="#" class="hover:text-blue-400 transition duration-300">About Us</a></li>
+        <li><a href="/aboutUs" class="hover:text-blue-400 transition duration-300">About Us</a></li>
         <li><a href="#" class="hover:text-blue-400 transition duration-300">Community</a></li>
         <li><a href="#" class="hover:text-blue-400 transition duration-300">Contacto</a></li>
       </ul>
