--- a/src/pages/aboutUs.astro
+++ b/src/pages/aboutUs.astro
@@ -3,26 +3,19 @@ title: "Sobre Nosotros";
 layout: "../layouts/Layout.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
+import "../styles/index.css";
+import "../styles/backgroundVideo.css";
 ---
 
 <Header />
 <html>
   <head>
     <title>Sobre Nosotros</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        background-color: #f1f1f28c;
-        color: white;
-        padding: 0px;
-        text-align: center;
-      }
-    </style>
   </head>
 
   <body>
     <main>
-      <section >
+      <section class="hero">
         <h1 class="text-4xl font-bold text-gray-800 mb-6">
           Sobre My SpaceBlogs
         </h1>
@@ -57,15 +50,3 @@ import Footer from "../components/Footer.astro";
     <Footer />
   </body>
 </html>
-
-<style>
-  #background-video {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    z-index: -1;
-  }
-</style>
