--- a/src/styles/backgroundVideo.css
+++ b/src/styles/backgroundVideo.css
@@ -1,9 +1,10 @@
 #background-video {
-    position: fixed; /* Fija el video en el fondo */
-    top: 0;
-    left: 0;
-    width: 100%; /* Ocupa todo el ancho */
-    height: 100%; /* Ocupa todo el alto */
-    object-fit: cover; /* Asegura que cubra toda la pantalla sin distorsión */
-    z-index: -1; /* Asegura que el video esté detrás del contenido */
-  }
+  position: fixed; /* Fija el video en el fondo */
+  top: 0;
+  left: 0;
+  width: 100%; /* Ocupa todo el ancho */
+  height: 100%; /* Ocupa todo el alto */
+  object-fit: cover; /* Asegura que cubra toda la pantalla sin distorsión */
+  z-index: -1; /* Asegura que el video esté detrás del contenido */
+  opacity: 0.8; /* Controla la opacidad, puedes ajustarlo entre 0 (totalmente transparente) y 1 (totalmente opaco) */
+}
