--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -1,5 +1,6 @@
 ---
-
+import "../styles/backgroundVideo.css";
+import "../styles/register.css";
 ---
 
 <!doctype html>
@@ -8,50 +9,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My SpaceBlog - Registrarse</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        margin: 0;
-        padding: 0;
-        text-align: center;
-        
-        color: white;
-      }
-      .container {
-        width: 300px;
-        margin: auto;
-        padding: 20px;
-        background: rgba(0, 0, 0, 0.7);
-        margin-top: 100px;
-        border-radius: 10px;
-      }
-      input {
-        width: 90%;
-        padding: 10px;
-        margin: 10px 0;
-        border: none;
-        border-radius: 5px;
-      }
-      button {
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        margin: 5px;
-        transition: 0.3s;
-      }
-      .btn-register {
-        background: #e67e22;
-        color: white;
-      }
-      .btn-back {
-        background: #e74c3c;
-        color: white;
-      }
-      button:hover {
-        opacity: 0.8;
-      }
-    </style>
   </head>
   <body>
     <div class="container">
@@ -75,16 +32,5 @@
       <source src="/assets/fondo2.mp4" type="video/mp4" />
       Tu navegador no soporta el formato de video.
     </video>
-    <style>
-      #background-video {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -1;
-      }
-    </style>
   </body>
 </html>
