--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ import "../styles/index.css";
               <h2>Lo que dicen nuestros usuarios</h2>
               <blockquote class="blockquote">
                   <p>"Gracias a My SpaceBlog, he conectado con miles de lectores y otros escritores."</p>
-                  <footer class="blockquote-footer">Susana Horia Matarrita</footer>
+                  <footer class="blockquote-footer text-dark">Susana Horia Matarrita</footer>
               </blockquote>
           </div>
       </div>
