--- a/src/styles/contacto.css
+++ b/src/styles/contacto.css
@@ -1,5 +1,5 @@
 form {
-    background-color: #ebf5fb;
+    background-color: #ebf5fb54;
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
