--- a/src/pages/register.astro
+++ b/src/pages/register.astro
@@ -16,6 +16,7 @@ import "../styles/register.css";
       <form>
         <input type="text" placeholder="Nombre Completo" required />
         <input type="email" placeholder="Correo Electrónico" required />
+        <input type="tel" placeholder="Teléfono" required />
         <input type="password" placeholder="Contraseña" required />
         <input type="password" placeholder="Confirmar Contraseña" required />
         <label for="date">Fecha de nacimiento</label>
