--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,5 +1,5 @@
 ---
-export let title = "My SpaceBlog";
+export let title = "My SpaceBlogs";
 ---
 
 <header class="fixed top-0 left-0 w-full bg-black bg-opacity-70 backdrop-blur-md text-white py-4 border-b-2 border-white shadow-lg z-50">
