--- a/src/pages/blogs.astro
+++ b/src/pages/blogs.astro
@@ -11,7 +11,7 @@ import "../styles/index.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My SpaceBlog - Landing Page</title>
+    <title>My SpaceBlogs - Blogs</title>
   </head>
 
   <body>
