--- a/src/pages/gracias.astro
+++ b/src/pages/gracias.astro
@@ -2,11 +2,8 @@
 import Agradecimiento from "../components/Agradecimiento.astro";
 import "../styles/backgroundVideo.css"; // Importar el archivo CSS
 
-
-// Puedes pasar el mensaje aquí
 const mensaje = "Gracias por registrarte en SpaceBlog!";
-const contenido =
-  "Espero que tengas una excelente experiencia de usuario en nuestro sitio";
+const contenido = "Espero que tengas una excelente experiencia de usuario en nuestro sitio";
 ---
 
 <Agradecimiento mensaje={mensaje} content={contenido} />
