--- a/src/components/Agradecimiento.astro
+++ b/src/components/Agradecimiento.astro
@@ -1,16 +1,11 @@
 ---
-// Ahora, el mensaje viene como un parámetro pasado desde donde se llame el componente
 const { mensaje, content } = Astro.props;
 ---
 
-<div
-  style="font-family: Arial, sans-serif; background-color: #8181dd4f; color: white; padding: 50px 0; text-align: center;"
->
+<div style="font-family: Arial, sans-serif; background-color: #8181dd4f; color: white; padding: 50px 0; text-align: center;">
   <h2>{mensaje}</h2>
   <p>{content}</p>
-  <a
-    href="/"
-    style="text-decoration: none; background-color: #e67e22; padding: 10px 20px; border-radius: 5px; color: white; margin-top: 20px; display: inline-block;"
-    >Regresar a Inicio</a
-  >
+  <a href="/" style="text-decoration: none; background-color: #e67e22; padding: 10px 20px; border-radius: 5px; color: white; margin-top: 20px; display: inline-block;">
+    Regresar a Inicio
+  </a>
 </div>
