--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,30 +1,15 @@
+---
+import "../styles/footer.css";
+---
+
 <footer class="bg-gray-800 text-gray-300 py-3 mt-12 text-sm">
-  <div class="container mx-auto text-center">
+  <div class="container mx-auto text-center footer-container">
     <p class="text-xs">&copy; 2024 Mi Blog. Todos los derechos reservados.</p>
     <p class="text-xs">Investigación Astro Kenneth y Silvia</p>
-    <div class="mt-2 space-x-3">
-      <a href="#" class="hover:text-white transition duration-300">Términos</a>
+    <div class="footer-links">
+      <a href="#">Términos</a>
       <span class="text-gray-500">|</span>
-      <a href="#" class="hover:text-white transition duration-300">Privacidad</a>
+      <a href="#">Privacidad</a>
     </div>
   </div>
 </footer>
-
-<style>
-  footer {
-    min-height: 60px; /* Altura mínima */
-    display: flex;
-    align-items: center; /* Centra el contenido verticalmente */
-    justify-content: center; /* Centra el contenido horizontalmente */
-    font-size: 0.8rem; /* Letra más pequeña */
-    padding: 10px 0; /* Ajustar el espacio vertical */
-    background-color: #102d4d;
-  }
-
-
-  /* Animación de entrada */
-  @keyframes fadeInUp {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
-  }
-</style>
