--- a/src/components/LoginForm.astro
+++ b/src/components/LoginForm.astro
@@ -1,4 +1,15 @@
-document.addEventListener("DOMContentLoaded", function () {
+---
+const { formId } = Astro.props; // Opcional: puedes pasar parámetros si es necesario
+---
+
+<form id={formId}>
+    <input type="email" placeholder="Correo Electrónico" required />
+    <input type="password" placeholder="Contraseña" required />
+    <button type="submit" class="btn-login">Ingresar</button>
+</form>
+
+<script type="module">
+    document.addEventListener("DOMContentLoaded", function () {
     const form = document.querySelector("form");
 
     form.addEventListener("submit", function (event) {
@@ -38,3 +49,4 @@ document.addEventListener("DOMContentLoaded", function () {
          window.location.href = "/blogs"; 
     });
 });
+</script>
